# Digital_skeptic_AI

./: README.md  app.py  main.py  prompt.py  pyproject.toml  requirements.txt
